.gradle/gradle.log
#################################################
         ForgeGradle 2.0-SNAPSHOT        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP 9.10               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\mcobjects\tileentityes\network\TileEntityNetworkController.java:60: error: cannot find symbol
				if(router.willSendTo((TileEntity&NetworkInterface&Messageable)i))i.onMessageReceved(action);
				                      ^
  symbol:   variable TileEntity
  location: class TileEntityNetworkController
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\mcobjects\tileentityes\network\TileEntityNetworkController.java:60: error: cannot find symbol
				if(router.willSendTo((TileEntity&NetworkInterface&Messageable)i))i.onMessageReceved(action);
				                                 ^
  symbol:   variable NetworkInterface
  location: class TileEntityNetworkController
C:\Users\toni\Desktop\Magiology 1.8\build\sources\main\java\com\magiology\mcobjects\tileentityes\network\TileEntityNetworkController.java:60: error: cannot find symbol
				if(router.willSendTo((TileEntity&NetworkInterface&Messageable)i))i.onMessageReceved(action);
				                                                  ^
  symbol:   variable Messageable
  location: class TileEntityNetworkController
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 33.711 secs
